feat(): add orgs and sessions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "yarn serve",
-    "build": "yarn build-ts",
+    "build": "rimraf dist && yarn build-ts",
     "preserve": "yarn build",
     "serve": "node dist/server.js",
     "watch-node": "sleep 5 && nodemon dist/server.js",
@@ -17,11 +17,14 @@
     "postgenerate:resource:document": "yarn format",
     "add:property:document": "hygen property add-to-document",
     "postadd:property:document": "yarn format",
+    "add:filter:document": "hygen filter add-to-document",
+    "postadd:filter:document": "yarn format",
     "add:property:object": "hygen property add-to-object",
     "postadd:property:object": "npm run format",
-    "add:roles": "node ./dist/data/import-dev-data.js --import",
-    "drop:roles": "node ./dist/data/import-dev-data.js --delete",
-    "seed:roles": "yarn drop:roles && yarn add:roles"
+    "add:admin": "node ./dist/data/import-dev-data.js --import",
+    "drop:admin": "node ./dist/data/import-dev-data.js --delete",
+    "preseed:admin": "yarn build",
+    "seed:admin": "yarn drop:admin && yarn add:admin"
   },
   "dependencies": {
     "@types/bcrypt-nodejs": "0.0.30",
