--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/statuses": "^2.0.5",
     "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "concurrently": "^7.6.0",
     "tslint": "^5.12.1"
   },
