--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bcrypt-nodejs": "0.0.3",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "helmet": "^7.1.0",
