--- a/user/package.json
+++ b/user/package.json
@@ -18,6 +18,7 @@
     "@lukemorales/query-key-factory": "^1.2.0",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
+    "@mui/x-date-pickers": "^7.27.1",
     "@nivo/bar": "^0.83.0",
     "@nivo/line": "^0.83.0",
     "@nivo/pie": "^0.83.0",
