--- a/api/package.json
+++ b/api/package.json
@@ -50,7 +50,7 @@
     "hygen": "^6.2.11",
     "lodash": "^4.17.21",
     "mailersend": "^2.3.0",
-    "mongoose": "^8.4.5",
+    "mongoose": "8.3.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
