--- a/user/package.json
+++ b/user/package.json
@@ -19,9 +19,9 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "@mui/x-date-pickers": "^7.27.1",
-    "@nivo/bar": "^0.83.0",
+    "@nivo/bar": "^0.88.0",
     "@nivo/line": "^0.83.0",
-    "@nivo/pie": "^0.83.0",
+    "@nivo/pie": "^0.88.0",
     "@tanstack/react-query": "4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "axios": "^1.2.1",
@@ -37,6 +37,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.4.5",
     "react-timeago": "^7.1.0",
+    "recharts": "^2.15.1",
     "stylis": "4.x",
     "stylis-plugin-rtl": "^2.1.1",
     "vite-tsconfig-paths": "^4.0.3",
