feat(user): profile

--- a/api/.env.example
+++ b/api/.env.example
@@ -27,3 +27,9 @@ ADMIN_EMAIL=exa@mpledev.com
 ADMIN_PASSWORD=test1234
 
 APP_NAME=example
+
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+SMTP_SECURE=false
