--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "@types/lodash": "^4.17.0",
     "@types/mongoose": "^5.3.17",
     "@types/node": "^11.9.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
@@ -51,6 +52,7 @@
     "lodash": "^4.17.21",
     "mailersend": "^2.3.0",
     "mongoose": "8.3.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
